RESOLVED FIXED164950
AX: role=treeitem accessible name not spoken to VoiceOver macOS when using string contained inside element
https://bugs.webkit.org/show_bug.cgi?id=164950
Summary AX: role=treeitem accessible name not spoken to VoiceOver macOS when using st...
Paul J. Adam
Reported 2016-11-18 13:29:01 PST
Steps to Reproduce: 1. Turn on VoiceOver on macOS 10.12.1 and Open Safari 10.0.1. 2. Visit http://w3c.github.io/aria-practices/examples/treeview/treeview-1a/treeview-1a.html. 3. Expand the Projects treeitem. 4. Set focus to project-1.docx treeitem. Expected Results: VoiceOver speaks "project-1.docx treeitem". Actual Results: VoiceOver speaks "File Viewer table No selection.".
Attachments
patch (4.92 KB, patch)
2017-01-11 14:51 PST, Nan Wang
cfleizach: review+
Radar WebKit Bug Importer
Comment 1 2016-11-18 13:29:15 PST
Nan Wang
Comment 2 2017-01-11 14:51:36 PST
chris fleizach
Comment 3 2017-01-11 15:59:54 PST
Comment on attachment 298616 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=298616&action=review > Source/WebCore/accessibility/AccessibilityNodeObject.cpp:1366 > + // Treeitems missing a label are labeled by all child elements. tree items is two words
Nan Wang
Comment 4 2017-01-11 16:12:45 PST
Note You need to log in before you can comment on or make changes to this bug.