AX: role=treeitem accessible name not spoken to VoiceOver macOS when using string contained inside element https://bugs.webkit.org/show_bug.cgi?id=164950 <rdar://problem/29337573>

Reviewed by Chris Fleizach.

Source/WebCore:

From the spec: https://www.w3.org/TR/wai-aria-practices/#TreeView
The element with role treeitem missing a label is labeled by its child elements.

Test: accessibility/mac/aria-tree-item-name.html

* accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::alternativeText):

LayoutTests:

* accessibility/mac/aria-tree-item-name-expected.txt: Added.
* accessibility/mac/aria-tree-item-name.html: Added.


Canonical link: https://commits.webkit.org/184048@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210605 268f45cc-cd09-0410-ab3c-d52691b4dbfc